--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ body{
     z-index: 100;
     background: #000712;
     height: 40px;
+    opacity: 0.9;
 }
 .nav_bar{
     position: absolute;
@@ -212,6 +213,8 @@ main {
     font-size: 100px;
     font-weight: 1000;
     text-shadow: 2px 2px 25px black;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
 }
 .topic-section{
     /*text-align: center;*/
@@ -261,13 +264,12 @@ h3 span{
     transition: all 2s;
 }
 .about-image{
-    background: url(images/aboutImage.png);
-    background-size: cover;
-    background-position: center;
-    width: 300px;
+    background: url(images/abou-image4.png)center center no-repeat;
+    background-size: 400px;
+    width: 400px;
     height: 400px;
-    border-radius: 0.9rem;
     margin-bottom: 69px;
+    border-radius: 50%;
 }
 .about-description{
     width: 667px;
@@ -397,7 +399,7 @@ h3 span{
     width: 80px;
     margin: 20px 15px;
     transition: 1s;
-    border: 2px solid #8C6FFF;
+    border: 1px solid #353250;
     border-radius: 25px;
     padding: 10px;
 }
@@ -420,7 +422,7 @@ h3 span{
     width: 80px;
     margin: 20px 15px;
     transition: 1s;
-    border: 2px solid #8C6FFF;
+    border: 1px solid #353250;
     border-radius: 25px;
     padding: 10px;
 }
@@ -513,6 +515,9 @@ h3 span{
     padding: 60px 10%;
     width: 100%;
     position: relative;
+    background: url(images/bg5.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .service-container{
@@ -523,7 +528,7 @@ h3 span{
 }
 
 .service-card{
-    border: 2px solid #353250;
+    border: 2px solid #9A98A8;
     position: relative;
     border-radius: 25px;
     background: transparent;
@@ -596,7 +601,7 @@ h3 span{
 }
 .face-front{
     transform: rotateY(0deg);
-    border: 2px solid #353250;
+    border: 1px solid #353250;
 }
 .face-back{
     position: absolute;
@@ -632,7 +637,7 @@ h3 span{
     height: 200px;
     width: 200px;
     /*border-radius: 30px;*/
-    border: 2px solid #8C6FFF;
+    border: 1px solid #353250;
     padding: 5px;
 }
 
