--- a/assets/style.css
+++ b/assets/style.css
@@ -264,7 +264,7 @@ h3 span{
     transition: all 2s;
 }
 .about-image{
-    background: url(images/img_1.png)center center no-repeat;
+    background: url(images/homeImage7.png)center center no-repeat;
     background-size: 400px;
     width: 400px;
     height: 400px;
