--- a/assets/style.css
+++ b/assets/style.css
@@ -186,10 +186,12 @@ main {
     text-decoration: none;
     margin: 10px;
     font-size: 20px;
+    transition: 1s;
 }
 
 .social-media a:hover{
-    box-shadow: 0 0 10px #FF014F;
+    box-shadow: 0 0 20px #FF014F;
+    transform: translateY(-5px);
 }
 
 .up-arrow{
