--- a/assets/style.css
+++ b/assets/style.css
@@ -1079,6 +1079,9 @@ footer span{
         width: 400px;
         height: 400px;
     }
+    .article {
+        gap: 0;
+    }
     .about-container p {
         text-align: center;
         font-size: 12px;
