--- a/assets/style.css
+++ b/assets/style.css
@@ -113,10 +113,13 @@ main {
     box-shadow: black 2px 2px 10px;
 }
 .home-image img{
-    top: 10%;
-    height: 90%;
+    top: 0%;
+    height: 100%;
     width: 100%;
     position: relative;
+    /*width: 340px;
+    height: 350px;*/
+    /*border-radius: 50%;*/
 }
 .home-image:hover{
     transform: scale(1.1);
@@ -311,8 +314,11 @@ h3 span{
 }
 .about-image img{
     position: relative;
-    width: 400px;
+    /*width: 400px;*/
     z-index: 10;
+    width: 340px;
+    height: 350px;
+    border-radius: 50%;
 }
 /*
 
