--- a/assignments/CSS/CSS/CASE-06/style.css
+++ b/assignments/CSS/CSS/CASE-06/style.css
@@ -38,7 +38,7 @@ section>div:nth-child(3){
 }
 section>div:nth-child(4){
     background-color: indigo;
-    background: url("../CASE-05/images/image7.jpg");
+    background: url("../CASE-05/images/image3.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -56,7 +56,7 @@ section>div:nth-child(6){
 }
 section>div:nth-child(7){
     background-color: orange;
-    background: url("../CASE-05/images/image1.jpg");
+    background: url("../CASE-05/images/image1.png");
     background-size: cover;
     background-position: center;
 }
