--- a/assets/style.css
+++ b/assets/style.css
@@ -315,7 +315,7 @@ h3 span{
 .about-image{
     background-size: 400px;
     width: 300px;
-    height: 310px;
+    height: 300px;
     margin-bottom: 69px;
     border-radius: 50%;
     position: relative;
@@ -324,8 +324,9 @@ h3 span{
 }
 .about-image img{
     position: relative;
-    width: 350px;
+    width: 300px;
     z-index: 10;
+    border-radius: 50%;
 }
 /*
 
@@ -575,7 +576,7 @@ h3 span{
 }
 
 .skill-content .progress h2 span{
-    color: #00eeff;
+    color: var(--main-color);
 }
 
 .skill-content .progress .bar{
@@ -590,7 +591,7 @@ h3 span{
     display: block;
     height: 100%;
     border-radius: 3rem;
-    background-color: #00eeff;
+    background-color: var(--main-color);
 }
 
 #html{
