--- a/assets/style.css
+++ b/assets/style.css
@@ -17,12 +17,14 @@ html{
 }
 
 #preloader{
-    background: url("images/check-loader-gif.gif") no-repeat center center;
+    background: var(--bg-color);
     background-size: cover;
-    background: black;
     height: 100vh;
     width: 100%;
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     z-index: 100;
 }
 body{
