--- a/assets/style.css
+++ b/assets/style.css
@@ -107,26 +107,11 @@ hr{
     left: 10%;
     top: 8%;
 }
-.headings{
+.headings {
     position: absolute;
     top: 10%;
     left: 22%;
     text-align: right;
-
-    /*  animation-name: heading-anima;
-      animation-iteration-count: 1;
-      animation-duration: 1.2s;
-      animation-fill-mode: both;
-      animation-timing-function: linear;*/
-}
-@keyframes heading-anima {
-    0% {
-        left: 0;
-    }
-
-    100% {
-        left: 22%;
-    }
 }
 .headings h1{
     font-size: 50px;
@@ -1118,7 +1103,7 @@ svg{
 .column img{
     border: 2px solid transparent;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     width: 100%;
     height: 50%;
     border-radius: 10px;
