--- a/assets/style.css
+++ b/assets/style.css
@@ -437,6 +437,7 @@ h3 span{
 /*=============================================================journey===============================================*/
 .journey{
     padding: 20px 10%;
+    overflow: hidden;
 }
 
 .journey-topic{
