--- a/style.css
+++ b/style.css
@@ -821,7 +821,7 @@ svg{
     padding: 20px 10%;
     width: 100%;
     position: relative;
-    background: url(../assets/images/bg5.jpg);
+    background: url(assets/images/bg5.jpg);
     background-size: cover;
     background-position: center;
 }
