--- a/style.css
+++ b/style.css
@@ -308,6 +308,9 @@ h3 span{
     gap: 10px;
     background: transparent;
     padding: 10px 5%;
+    /*background: url(assets/images/bg.jpeg);
+    background-size: cover;
+    background-position: center;*/
 }
 
 .about-img{
@@ -318,6 +321,9 @@ h3 span{
     display: flex;
     align-items: center;
     justify-content: center;
+    background: url(assets/images/Free-Vect.jpeg);
+    background-size: cover;
+    background-position: center;
 }
 
 .about-img img{
@@ -334,8 +340,8 @@ h3 span{
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border-top: .2rem solid var(--bg-color);
-    border-bottom: .2rem solid var(--bg-color);
+    border-top: .2rem solid transparent;
+    border-bottom: .2rem solid transparent;
     border-left: .2rem solid #00eeff;
     border-right: .2rem solid #00eeff;
 
@@ -914,7 +920,7 @@ svg{
 /*======================================================projects===============================================*/
 
 .portfolio{
-    background: var(--bg-color);
+    background: transparent;
     padding: 20px 10%;
 }
 
@@ -1102,7 +1108,36 @@ svg{
     text-decoration: none;
 }
 
+.cubes{
+    position: relative;
+    display: flex;
+}
 
+.cubes span{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background: var(--main-color);
+    margin: 0 4px;
+    padding: 0 40px;
+    border-radius: 15px;
+    transform: rotate(180deg);
+    box-shadow: 0 0 0 10px var(--main-color),
+    0 0 25px var(--main-color),
+    0 0 50px var(--main-color);
+    animation: cube-anima 15s linear infinite;
+    animation-duration: calc(125s / var(--i));
+    z-index: -10;
+    opacity: 0.2;
+}
+@keyframes cube-anima{
+    0%{
+        transform: translateY(60vh) scale(0);
+    }
+    100%{
+        transform: translateY(-080vh) scale(1);
+    }
+}
 /*==========================================================gallery===============================================*/
 .gallery{
     position: relative;
