--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ h3 span{
     gap: 10px;
     background: transparent;
     padding: 10px 5%;
-    background: url(assets/images/about-bg1.webp);
+    background: url(assets/images/dark-5u7v1sbwoi6hdzsb.jpg);
     background-size: cover;
     background-position: center;
 }
