--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ h3 span{
     left: 10%;
     height: 100%;
     width: 100%;
-    background-color: var(--bg-color);
+    background-color: black;
     border-left: 4px solid white;
     animation: about-detail-anima 4s steps(12) infinite;
 }
